fix break on links

--- a/_src/_includes/_assets/css/core.css
+++ b/_src/_includes/_assets/css/core.css
@@ -544,6 +544,10 @@ content#home {
   font-size: 18px;
 }
 
+.post-body-notes a {
+  word-break: break-all;
+}
+
 .post-body-notes .post-meta {
   padding: 0;
   color: var(--blood-orange);
